deploy all changes
